# nft-marktplace

./: README.md  artifct-lbuc.cabal  cabal.project  nami-script.cabal
app/: Main.hs
scripts/: artifct-lbuc.plutus
src/: OffChain.hs  OnChain.hs  Trace.hs  Types.hs
