cabal-version:      2.4
name:               artifct-lbuc
version:            0.1.0.0
author:             sbcdn
maintainer:         torben@artifct.app
Copyright:          © 2021 Torben Poguntke
Build-Type:         Simple


extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  exposed-modules:     
                    Types
                    OnChain
                    OffChain
  build-depends:     
                       aeson -any
                     , base -any
                     , bytestring -any
                     , containers -any
                     , plutus-core -any
                     , plutus-tx -any
                     , playground-common -any
                     , plutus-ledger -any
                     , plutus-ledger-api -any
                     , serialise -any
                     , cardano-api -any

  if !(impl(ghcjs) || os(ghcjs))
        build-depends: plutus-tx-plugin -any

  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


executable tp-nami-script
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:     
                       aeson
                     , base -any
                     , bytestring
                     , containers
                     , data-default
                     , plutus-ledger
                     , prettyprinter
                     , plutus-tx
                     , cardano-api -any
                     , cardano-ledger-alonzo -any
                     , plutus-ledger-api -any
                     , artifct-lbuc
